--- a/dz_python_1.ipynb
+++ b/dz_python_1.ipynb
@@ -14,12 +14,12 @@
     }
    ],
    "source": [
-    "### Task 1\n",
+    "### Task 1 #Да хотел использовать, но странно почему то забыл\n",
     "phrase_1 = '640Кб должно хватить для любых задач. Билл Гейтс (по легенде)'\n",
     "phrase_2 = 'Насколько проще было бы писать программы, если бы не заказчики'\n",
-    "if phrase_1 > phrase_2:\n",
+    "if len(phrase_1) > len(phrase_2):\n",
     "    print('Фраза 1 длиннее фразы 2')\n",
-    "elif phrase_1 == phrase_2:\n",
+    "elif len(phrase_1) == len(phrase_2):\n",
     "    print('Фразы равной длины')\n",
     "else:\n",
     "    print('Фраза 2 длиннее фразы 1')"
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -39,9 +39,9 @@
     }
    ],
    "source": [
-    "### Task 2\n",
-    "year = 20121\n",
-    "if year % 4 == 0:\n",
+    "### Task 2 #Спасибо за информацию про 100-е года\n",
+    "year = 1700\n",
+    "if year % 400 == 0 or (year % 100 != 0 and year % 4 == 0):\n",
     "    print('Високосный год')\n",
     "else:\n",
     "    print('Обычный год')"
@@ -66,7 +66,7 @@
     "day = int(input('Введите день'))\n",
     "while day > 32 or (month == 'Февраль' and day > 29):\n",
     "    day = int(input('Введите правильный день месяца'))\n",
-    "month = str(input('Введите Месяц'))\n",
+    "month = input('Введите Месяц')\n",
     "if day >= 21 and month == 'Январь' or day <= 19 and month == 'Февраль':\n",
     "    print('Ваш знак зодика Володей')\n",
     "elif day >= 20 and month == 'Февраль' or day <= 20 and month == 'Март':\n",
@@ -149,9 +149,9 @@
     "    sum_end += (number // 10**i) % 10\n",
     "    i += 1\n",
     "if sum_start == sum_end:\n",
-    "    print ('Счастливый билет')\n",
+    "    print('Счастливый билет')\n",
     "else: \n",
-    "    print ('Несчастливый билет')"
+    "    print('Несчастливый билет')"
    ]
   },
   {
@@ -169,24 +169,24 @@
    ],
    "source": [
     "### Task 6\n",
-    "figure = str(input('Введите фигуру')) \n",
+    "figure = input('Введите фигуру')\n",
     "if figure == 'Круг':\n",
     "    r = int(input('Введите радиус круга (см.)'))\n",
-    "    print ('Площадь Круга','%.2f' % 3.14*r**2)\n",
+    "    print('Площадь Круга','%.2f' % 3.14*r**2)\n",
     "elif figure == 'Треугольник':\n",
     "    a = int(input('Введите длину стороны A (см.)'))\n",
     "    b = int(input('Введите длину стороны B (см.)'))\n",
     "    c = int(input('Введите длину стороны C (см.)'))\n",
     "    p = (a + b + c) / 2\n",
     "    S = (p * (p - a) * (p - b) * (p - c))**(1./2)\n",
-    "    print ('Площадь Треугольника',\"%.2f\" % S)\n",
+    "    print('Площадь Треугольника',\"%.2f\" % S)\n",
     "elif figure == 'Прямоугольник':\n",
     "    a = int(input('Введите длину стороны A (см.)'))\n",
     "    b = int(input('Введите длину стороны B (см.)'))\n",
     "    S = a * b\n",
-    "    print ('Площадь Прямоугольника',\"%.2f\" % S)\n",
+    "    print('Площадь Прямоугольника',\"%.2f\" % S)\n",
     "else:\n",
-    "    print ('Вы неверно указали фигуру')\n"
+    "    print('Вы неверно указали фигуру')\n"
    ]
   }
  ],
